--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2021.10.8
 cycler==0.11.0
 dj-database-url==0.5.0
 Django==4.0.4
+django-multiselectfield==0.1.12
 fastkml==0.12
 fonttools==4.33.3
 gunicorn==20.1.0
